# devent

./: .gitignore  README.md
devent-api/: .gitignore  package.json
devent-api/src/: server.ts
devent-frontend/: .gitignore  package.json
devent-frontend/assets/: testEvent1.json
devent-frontend/components/: CreateEvent.js  CreateEvent.tsx  Event.js  Event.tsx  Header.js  Header.tsx  HomeView.tsx  SignUp.js
devent-frontend/context/: WalletConnectionProvider.js  context.js  useWalletBalance.js
devent-frontend/pages/: _app.js  _app.tsx  all-events.js  all-events.tsx  create-event.js  create-event.tsx  index.js  index.tsx
devent-frontend/utils/: const.js  const.ts  devent.json  get-program.js  get-program.ts  offchain.js  onchain.js
devent-program/: .gitignore  README.md  package.json
devent-program/app/: index.ts
devent-program/migrations/: deploy.ts
devent-program/programs/devent/: Cargo.toml
devent-program/programs/devent/src/: collection_nft.rs  error.rs  event.rs  lib.rs  registration.rs  regular_nft.rs  sell.rs  state.rs
devent-program/tests/: integration.ts  sdk.test.ts  unit.test.ts  unit.ts  utils.ts
devent-program/utils/: const.ts  utils.ts
devent-sdk/: .yarnrc  package.json
devent-sdk/src/: errors.ts  event.ts  index.ts  registration.ts  resell.ts  types.ts
devent-sdk/utils/: const.ts
frontend-deprecated/components/: CreateEvent.tsx  Event.tsx
frontend-deprecated/context/: WalletConnectionProvider.tsx
frontend-deprecated/pages/: create-event.tsx  index.tsx
program-deprecated/: Anchor.toml  package.json
(+32 files in other folders)
