[package]
name = "devent"
version = "0.1.0"
description = "Onchain ticketing service using NFTs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "devent"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
mpl-token-metadata = { version="1.2.5", features=["no-entrypoint"]}
anchor-spl = "0.25.0"